# RustEd

./: Cargo.toml  PROCEDURAL.md  README.md  build.rs  setup_project.sh
src/: lib.rs  main.rs
src/bsp/: bsp_level.rs  bsp_node.rs  bsp_procedural.rs  bsp_util.rs  debug_viz.rs  mod.rs
src/document/: document.rs  mod.rs
src/editor/: commands.rs  core.rs  generator.rs  instance.rs  mod.rs  objects.rs
src/editor/tools/: draw.rs  mod.rs  sectors.rs  select.rs  shape.rs  things.rs
src/map/: linedef.rs  mod.rs  sector.rs  sidedef.rs  thing.rs  vertex.rs
src/platform/: mod.rs
src/ui/: central_panel.rs  dialog.rs  editor_ui.rs  file.rs  main_window.rs  menu.rs  mod.rs  side_panel.rs  status_bar.rs  theme.rs  tool_window_manager.rs
src/utils/: geometry.rs  mod.rs  util.rs
