[package]
name = "rust_ed"
version = "0.1.0"
edition = "2021"
authors = ["Ericson Willians <ericsonwillians@protonmail.com>"]
description = "A high-performance, concurrent Doom map editor with procedural generation, inspired by the classic Eureka editor."
license = "MIT"
repository = "https://github.com/ericsonwillians/RustEd"
documentation = "https://docs.rs/rusted"
keywords = ["doom", "editor", "procedural-generation", "concurrency", "rayon", "egui"]
categories = ["game-tools", "graphics"]
build = "build.rs"

[dependencies]
# UI Libraries
egui = "0.20"
egui-winit = "0.20"
eframe = "0.20"
winit = "0.27"
parking_lot = "0.12"
rand = "0.9.0"
union-find = "0.1"

# Concurrency & Parallelism
rayon = "1.6"

# Logging
log = "0.4"
env_logger = "0.9"

# Serialization & JSON support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing and binary I/O support
image = "0.24"
byteorder = "1.4"
thiserror = "2.0.11"
rfd = "0.15.2"

# Async utilities
futures-lite = "2.6.0"
futures-util = { version = "0.3.31", features = ["io"] }
async-trait = "0.1.86"
futures = "0.3.31"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
include_dir = "0.7"

[dev-dependencies]
assert_approx_eq = "1.1"

[features]
default = ["gui"]
gui = []
headless = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
